<resources>
    <string name="app_name">ClashRoyaleStats</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="strEnterTag">Enter a player tag</string>
    <string name="strEnter">Enter</string>
    <string name="logoDesc">Clash Royale Logo</string>

    <string name="favCard">Favourite Card</string>

    <string name="strUsername">Username: \n %s</string>
    <string name="strLevel">Level: %d</string>
    <string name="strTag">Tag Player: \n %s</string>

    <string name="strCurrentDeck">Current Deck</string>

    <string name="strCurrentTrophies">Current trophies: %d</string>
    <string name="strBest">Best trophies: %d</string>

    <string name="strWins">Wins: %d</string>
    <string name="strLosses">Losses: %d</string>

    <string name="strAllCards">All Cards</string>
    <string name="strAllBadges">All Badges</string>

    // Menu

    <string name="strUserMenu">User</string>
    <string name="strChestMenu">Chest</string>
    <string name="strCardMenu">Cards</string>
    <string name="strBadgeMenu">Badges</string>


    // Card Detail

    <string name="strCardName">Name: \n %s</string>
    <string name="strCardRarity">Rarity: \n %s</string>
    <string name="strCardLevel">Level: %d</string>
    <string name="strCardElixir">Elixir cost: %d</string>

    //Errores

    <string name="notFound">Player was not found</string>
    <string name="unknownError">Unknown error</string>

</resources>