<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.cardsDetailActivity.CardDetailActivity">

    <ImageView
        android:id="@+id/ivCard"
        android:layout_width="220dp"
        android:layout_height="220dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toTopOf="@+id/tvName"
        app:layout_constraintVertical_chainStyle="packed"
        />

    <TextView
        android:id="@+id/tvName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/strCardName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCard"
        style="@style/tvStyleDetail"
        app:layout_constraintBottom_toTopOf="@+id/tvRarity"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvRarity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/strCardRarity"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvName"
        style="@style/tvStyleDetail"
        app:layout_constraintBottom_toTopOf="@+id/tvElixir"
        android:textAlignment="center"
        />

    <TextView
        android:id="@+id/tvElixir"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="@string/strCardElixir"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvRarity"
        style="@style/tvStyleDetail"
        app:layout_constraintBottom_toTopOf="@+id/tvLevel"
        android:textColor="#a0f"
        />

    <TextView
        android:id="@+id/tvLevel"
        style="@style/tvStyleDetail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvElixir"
        tools:text="@string/strLevel" />

</androidx.constraintlayout.widget.ConstraintLayout>